# intellect

./: .gitmodules  0.cpp  2.cpp  2019-08-27T10:46:43-0400.swn  2019-10-23T17:57:56-04002019-07-04-intellect-1.txt  2019-10-23T18:01:50-04002019-08-12-intellect-mind_control_medley_song.txt  2019-10-23T18:02:10-0400.swp  BAGEL.md  CORE1.cpp  CORE2.cpp  NOTE.txt  NOTE_FOR_DISCOVERERS  OpenCog.txt  README.md  WORKING_TRUE_PLAN.txt  codeways  dialogue.txt  emotions-ideas.txt  graveyard-of-the-misunderstood  intellect.cpp  level4-5.txt  name.scm  nascent2.js  nascent3.js  nascent5.js  nascent6.js  notes.txt  other  plan:every-habit-at-least-200ms  project.scm  random.cpp  role-play-learning-log-with-influences-2020-01-06.txt  smoothness.hpp
chart/: .swp  Context.md  README.md  notes.txt
daydreams/: 2020-01-21-public_entertainment_media_influence_worry.txt  TREES_STARS_OCEANS_GUESS.txt
friend_tool/: .array.cpp.swp  .simple.cpp.swp  .tools.hpp.swp  .two.cpp.swp  basic_includes.hpp  makefile  preprocess.bash  simple.cpp  tools.hpp  two.cpp
friend_tool-metaness/: a_link_is_a_node_is_a_graph.cpp
garden-of-the-misunderstood/: $(date --iso)-notes.txt  .2020-03-24-roleplay.txt.swp  .2020-05-08-fish-gasp.txt.swp  .99-DIALOGUE-01.txt.swp  .swn  .swo  00-ORGANIZATION-01.txt  2019-06-19-mentions-global-similarity-ai-pattern.txt  2020-01-02-the-mathematical-purpose-of-celebration.txt  2020-02-17-1251Eastern.txt  2020-02-17-fragments.txt  2020-02-17-judging-words.txt  2020-02-20-0632Eastern-i-am-a-neuron-in-a-family-of-neurons-and-i-can-speak-of-killing-my-close-relatives.txt  2020-02-21-0751Eastern-delta-responsibility.txt  2020-02-22-08:38:30.052915074--0500-.swm  2020-02-22-08:49:51.891935945--0500-.swn  2020-02-22-11:12:02.401187866--0500-.swk  2020-02-24-01:48:15.051447187--0500-.swg  2020-02-25-defensive-mediation-around-what-is-life-inside-a-new-AI.txt  2020-02-26 10:57:41.625784519 -0500-vim-swapfile.swl  2020-02-28 11:57:03.165790546 -0500-vim-swapfile.swj  2020-02-28 12:56:53.370917130 -0500-vim-swapfile.swn  2020-02-28 15:34:09.168407209 -0500-vim-swapfile.swg  2020-02-28 17:56:51.844998283 -0500-vim-swapfile.swi  2020-02-29 12:00:02.549505653 -0500-vim-swapfile.swe  2020-03-01 16:29:14.139517257 -0500-vim-swapfile.swf  2020-03-02 03:32:43.031953334 -0500-vim-swapfile.swa  2020-03-02 05:58:59.752303210 -0500-vim-swapfile.svz  2020-03-02 11:38:35.846083078 -0500-vim-swapfile.svx  2020-03-03 02:14:44.816952363 -0500-vim-swapfile.svu  2020-03-03 03:29:25.150221493 -0500-vim-swapfile.svs  2020-03-03 04:57:38.037308764 -0500-vim-swapfile.svr  2020-03-03 18:28:31.601807019 -0500-vim-swapfile.svp  2020-03-04-1552-earlier-also.txt  (+362 more)
starts/push/: .--.swp  .find_relevant_string.cpp.swp  .loaded_relevance.hpp.swp  .swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  copy_data.cpp  core.cpp  example_behavior.cpp  find_relevant_string.cpp  loaded_relevance.cpp  loaded_relevance.hpp  run.cpp  running_relevance  running_relevance.cpp  running_relevence.cpp
(+34888 files in other folders)
